# assignee-finder

./: .gitignore  README.md  config.example.toml  pyproject.toml
assignee-finder/: assignee_finder.py
assignee_finder/: github.py  main.py  pagure.py
