[tool.poetry]
name = "assignee-finder"
version = "0.1.0"
description = "Script for finding to what ticket users are assigned across various services."
authors = ["Michal Konečný <mkonecny@redhat.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
assignee_finder = "assignee-finder.assignee_finder:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
click = "^8.1.3"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
